# knowledge-network

./: .env.example  .gitattributes  .gitignore  .mcp.json  =4.0.0  CLAUDE.md  README.md  anomalies.yaml  pyproject.toml  run.py  run.sh
.claude/: CLAUDE.md
.oi-pipe/: config.yaml  director.md  rag_index.json  rag_index.npy
.oi-pipe/agents/: dev-agent.md  qa-agent.md  (+3 more)
.oi-test-conflicts/: embeddings.json  knowledge.yaml
docs/: BIG-PICTURE.md  JOURNEY.md  PROJECT.md  ROADMAP.md  SESSION-MAP.md  TODO.md  build-paper.sh  pipeline.md  publication-strategy.md  tdd-test-generation-rules.md  tech-stack.md  thesis-contradictions.md  thesis.md  whitepaper.md
scripts/: ccm_chart.py  ccm_comparison.py  config-8a6ba32f.json  config-d12e4abc.json
tests/: .last_run  __init__.py  conftest.py  helpers.py  test_acceptance_effort_lifecycle.py  test_benchmark_append_message.py  test_chatgpt_parser.py  test_chatlog.py  test_cluster.py  test_confidence.py  test_conflicts.py  test_context.py  test_context_building.py  test_decay.py  test_decisions.py  test_e2e_conversation.py  test_e2e_real_llm.py  test_embed.py  test_ingest.py  test_integration_adversarial.py  test_integration_llm.py  test_interpret.py  test_knowledge.py  test_linker.py  test_llm_log.py  test_mcp_server.py  test_migration.py  test_models.py  test_orchestrator.py  test_parser.py  test_patterns.py  test_proof_run.py  test_resolution_detection.py  test_schemas.py  test_search.py  test_session_log.py  test_sources.py  test_storage.py  test_story1_capture_ambient_chatter.py  test_story2_explicitly_open_a_new_effort.py  (+10 more)
(+203 files in other folders)
